support ipuz conversion

--- a/puz/index.html
+++ b/puz/index.html
@@ -25,9 +25,17 @@
             <div class="col-sm-6">
                 <div class="row mb-3">
                     <div class="input-group metadata">
-                        <input type="text" class="form-control" placeholder="ConvertedPuzzle" id=title>
+                        <input type="text" class="form-control" placeholder="ConvertedPuzzle" id="title">
                         <span class="input-group-text">by</span>
-                        <input type="text" class="form-control" placeholder="sheet2puz" id="author">
+                        <input type="text" class="form-control" placeholder="https://hpp3.github.io/puz/" id="author">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="ipuz" checked>
+                    <label class="form-check-label" for="ipuz">
+                        Export as .ipuz
+                    </label>
                     </div>
                 </div>
                 <div class="row mb-3">
